--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </head>
+
 <body>
     <h1>My Page</h1>
+
+    <button type="button" onclick="clicou()">Botão</button>
+    <h3 id="ex1">Obrigado por Clicar!</h3>
+    <p id="ex2">Obrigado por Clicar!</p>
+    <p id="ex2" onclick="redirect()">Redirecionar</p>
+    <h3 id="ex3">Obrigado por Clicar!</h3>
 </body>
+
 </html>
